--- a/style.css
+++ b/style.css
@@ -2,34 +2,35 @@
   display: flex;
 }
 .grid {
-  width: 400px;
-  height: 800px;
+  width: 350px;
+  height: 700px;
   display: flex;
   flex-wrap: wrap;
-  background-color: #29EB7F;
+  background-color: #AE77FF;
   border-radius: 5px;
 }
 
 .grid div {
-  height: 40px;
-  width: 40px;
+  height: 35px;
+  width: 35px;
 }
 
 .mini-grid {
-  width: 240px;
-  height: 240px;
+  width: 195px;
+  height: 195px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
-  background-color: #85D7FF;
+  background-color: #AE77FF;
   margin-left:50px;
   border-radius: 5px;
 }
 .tetromino {
-  background-color: #592DEA;
+  background-color: #73FFC3;
 }
 
+
 .mini-grid div {
-  width: 60px;
-  height: 60px;
+  width: 48.75px;
+  height: 48.75 px;
 }
